# fawkes-robotino

./: .clang-format  .cmake-format  .cmakelint.py  .gitattributes  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Makefile  TODO.md  config.yaml  docker-compose.yml  git-reauthor.sh  prettier.json
src/libs/: CMakeLists.txt  Makefile
src/libs/asp_common/: Common.files  Common.includes  Makefile  refbox_comm.cpp  refbox_comm.hpp
src/libs/asp_msgs/: Ack.proto  Beacon.proto  Makefile
src/libs/gazebo/: Makefile
src/libs/interfaces/: .gitignore  CMakeLists.txt  ConveyorConfigInterface.h  ConveyorPoseInterface.xml  MPSRecognitionInterface.h  Makefile  ObjectTrackingInterface.xml  PolarPosition2DInterface.cpp  PolarPosition2DInterface.h  PolarPosition2DInterface.tolua  PolarPosition2DInterface.xml  PuckVisionInterface.cpp  PuckVisionInterface.h  PuckVisionInterface.tolua  PuckVisionInterface.xml  RobotinoAmpelInterface.cpp  RobotinoAmpelInterface.h  RobotinoAmpelInterface.tolua  RobotinoAmpelInterface.xml  RobotinoLightInterface.cpp  RobotinoLightInterface.h  RobotinoLightInterface.tolua  RobotinoLightInterface.xml  ShelfConfigurationInterface.cpp  ShelfConfigurationInterface.h  ShelfConfigurationInterface.tolua  ShelfConfigurationInterface.xml  SignalHintInterface.cpp  SignalHintInterface.h  TagVisionInterface.cpp  TagVisionInterface.h  TagVisionInterface.tolua  TagVisionInterface.xml  ZoneInterface.cpp  ZoneInterface.h  ZoneInterface.tolua  ZoneInterface.xml
src/libs/llsf_msgs/: AchieveWorkpiece.proto  AgentTask.proto  AttentionMessage.proto  BeaconSignal.proto  CMakeLists.txt  ClipsSmtData.proto  ClipsSmtData.txt  ConveyorVisionResult.proto  ExplorationInfo.proto  GameInfo.proto  GameState.proto  LightSignals.proto  LockMessage.proto  MachineCommands.proto  MachineDescription.proto  MachineInfo.proto  MachineInstructions.proto  MachineReport.proto  Makefile  NavigationChallenge.proto  OrderInfo.proto  Plan.proto  Pose2D.proto  Pose3D.proto  PreparedForProduction.proto  ProductColor.proto  PuckDetectionResult.proto  PuckInfo.proto  RingInfo.proto  RobotCommands.proto  RobotInfo.proto  SimTimeSync.proto  StorageInfo.proto  Sync.proto  Team.proto  Time.proto  VersionInfo.proto  WorkpieceInfo.proto  Worldmodel.proto  Zone.proto
src/plugins/: CMakeLists.txt  Makefile
src/plugins/agent-monitor/: Makefile  agent-monitor-plugin.cpp  agent-monitor-processor.cpp  agent-monitor-processor.h  agent-monitor-thread.cpp  agent-monitor-thread.h
src/plugins/agent-task-skiller-bridge/: CMakeLists.txt  bridge-plugin.cpp  bridge-thread.cpp  bridge-thread.h
src/plugins/ampelvar/: Makefile  pipeline_thread.cpp  pipeline_thread.h  robotino_ampelvar_plugin.cpp
src/plugins/arduino/: CMakeLists.txt  Makefile  README  arduino_plugin.cpp  com_message.cpp  com_message.h  com_thread.cpp  com_thread.h  fawkes_plugin_comm.ino  serialport.cpp  serialport.h  tf_thread.cpp  tf_thread.h
src/plugins/arduino_f/: arduino_plugin.cpp  serialport.cpp
src/plugins/asp-agent/: Agent.files  Agent.includes  Makefile  asp_agent_plugin.cpp  asp_agent_refbox_comm.cpp  asp_agent_thread.cpp  asp_agent_thread.cpp.html  asp_agent_thread.h  refbox_comm.cpp
src/plugins/asp-planer/: Makefile  Planer.config  Planer.files  Planer.includes  asp_planer_clingo.cpp  asp_planer_doc_and_config.cpp  asp_planer_externals.cpp  asp_planer_externals.h  asp_planer_graph.cpp  asp_planer_plan.cpp  asp_planer_plugin.cpp  asp_planer_refbox_comm.cpp  asp_planer_thread.cpp  asp_planer_thread.h  asp_planer_types.h  refbox_comm.cpp
src/plugins/asp-planner/: Makefile  Planner.config  Planner.files  Planner.includes  asp_planner_clingo.cpp  asp_planner_doc_and_config.cpp  asp_planner_externals.cpp  asp_planner_externals.h  asp_planner_graph.cpp  asp_planner_plan.cpp  asp_planner_plugin.cpp  asp_planner_thread.cpp  asp_planner_thread.h  asp_planner_types.h
src/plugins/ax12_gripper/: Makefile  act_thread.cpp  act_thread.h  ax12_gripper_plugin.cpp  ax12_gripper_thread.cpp  ax12_gripper_thread.h  sensor_thread.cpp  sensor_thread.h
src/plugins/box_detect/: CMakeLists.txt  box_detect_plugin.cpp  box_detect_thread.cpp  box_detect_thread.h
src/plugins/bridge/: IStreamWrapper.cpp  Makefile  Ros_client.cpp  TODO LIST.md  Web_server.cpp  blackboard_processor.cpp  blackboard_processor.h  bridge_interface.cpp  bridge_interface.h  bridge_plugin.cpp  bridge_processor.cpp  bridge_thread.cpp  bridge_thread.h  dispatcher  dispatcher.cpp  dispatcher.h  fawkes_bridge.cpp  generic_bridge.cpp  generic_bridge.h  generic_bridge_manager.cpp  generic_bridge_manager.h  ibridge.h  idispatcher.h  isession.h  ros_endpoint.cpp  ros_proxy.cpp  ros_proxy.h  startRosbridge.sh  subscribe.cpp  subscribe.h  subscribtion.h  test_hello.py  web_session.cpp  web_session.h
src/plugins/clips-gym-rcll/: CMakeLists.txt  clips-gym-rcll-plugin.cpp  clips-gym-rcll-thread.cpp  clips-gym-rcll-thread.h
src/plugins/clips-mip-scheduler/: Makefile  clips_mip_scheduler_feature.cpp  clips_mip_scheduler_feature.h  clips_mip_scheduler_plugin.cpp  clips_mip_scheduler_thread.cpp  clips_mip_scheduler_thread.h
src/plugins/clips-motor-switch/: CMakeLists.txt  Makefile  clips-motor-switch-plugin.cpp  clips-motor-switch-thread.cpp  clips-motor-switch-thread.h
src/plugins/clips-simulation-result/: CMakeLists.txt  clips-simulation-result-plugin.cpp  clips-simulation-result-thread.cpp  clips-simulation-result-thread.h
src/plugins/clips-smt/: Main.py  Makefile  clips-smt.mk  clips_smt_data.h  clips_smt_machine.h  clips_smt_order.h  clips_smt_plugin.cpp  clips_smt_robot.h  clips_smt_thread.cpp  clips_smt_thread.h  clips_smt_workingPiece.h
src/plugins/clips-tsp/: Makefile  clips_tsp_plugin.cpp  clips_tsp_thread.cpp  clips_tsp_thread.h
src/plugins/clips_gym_rcll/: CMakeLists.txt  ClipsWorld.py  Makefile  clips_gym_rcll_plugin.cpp  clips_gym_rcll_thread.cpp  clips_gym_rcll_thread.h
src/plugins/clusterdetection/: Makefile  laser_cluster_detector_thread.cpp  laser_cluster_detector_thread.h
src/plugins/gazebo/: Makefile  (+1 more)
(+2081 files in other folders)
