set_output_directory_plugins()

set(CMAKE_SHARED_MODULE_PREFIX "")
# include_directories(${PROJECT_SOURCE_DIR}/src)
add_subdirectory(clips-motor-switch)
add_subdirectory(navgraph-generator-mps)
add_subdirectory(skiller_motor_state)
add_subdirectory(mps-laser-gen)
add_subdirectory(laser_front_dist)
add_subdirectory(tag_vision)
add_subdirectory(object-tracking)
add_subdirectory(conveyor_pose)
add_subdirectory(conveyor_plane)
